--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@babel/core": "^7.5.5",
     "@babel/parser": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/traverse": "^7.5.5"
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/traverse": "^7.5.5",
+    "rimraf": "^3.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +19,6 @@
     "type": "git",
     "url": "git@baijingfeng.github.com:baijingfeng/boxin.git"
   },
-  "author": "",
+  "author": "bai jingfeng",
   "license": "ISC"
 }
